# diag-converter

./: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: build_test.yml
diag-cli/: BUILD.bazel  Cargo.toml
diag-cli/src/: convert.rs  main.rs
diag-cli/tests/: test_cda_compat.rs  test_comparative.rs  test_golden_yaml.rs  test_integration.rs  test_lossless.rs  test_mdd_parity.rs
diag-ir/: BUILD.bazel  Cargo.toml
diag-ir/src/: filter.rs  from_fbs.rs  lib.rs  to_fbs.rs  types.rs  validate.rs
diag-ir/tests/: test_fbs_conversion.rs  test_types.rs
diag-odx/: BUILD.bazel  Cargo.toml
diag-odx/src/: inheritance.rs  lib.rs  odx_model.rs  parser.rs  pdx_reader.rs  ref_resolver.rs  writer.rs
diag-odx/tests/: test_odx_model.rs  test_odx_parser.rs  test_odx_writer.rs  test_pdx_reader.rs
diag-yaml/: BUILD.bazel  Cargo.toml
diag-yaml/src/: lib.rs  parser.rs  semantic_validator.rs  service_extractor.rs  service_generator.rs  validator.rs  writer.rs  yaml_model.rs
diag-yaml/tests/: test_parser.rs  test_semantic_validator.rs  test_validator.rs  test_writer.rs
docs/architecture/: mdd-format.md
docs/yaml-schema/: ODX_YAML_MAPPING.md  SCHEMA.md  schema.json
mdd-format/: BUILD.bazel  Cargo.toml  build.rs
mdd-format/schemas/: diagnostic_description.fbs
mdd-format/src/: compression.rs  lib.rs  reader.rs  writer.rs
mdd-format/tests/: test_compression.rs  test_reader.rs  test_roundtrip.rs
test-fixtures/mdd/: FLXC1000.mdd  FLXC1000_yaml.mdd  FLXCNG1000.mdd  FLXCNG1000_yaml.mdd
test-fixtures/odx/: FLXC1000.pdx  FLXCNG1000.pdx  minimal.odx
test-fixtures/yaml/: FLXC1000.yml  FLXCNG1000.yml  example-ecm.yml  protocol-esd-fixture.yml
