[package]
name = "diag-yaml"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
diag-ir = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
