[package]
name = "mdd-format"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
flatbuffers = { workspace = true }
prost = { workspace = true }
xz2 = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[build-dependencies]
prost-build = "0.13"
cargo_toml = "0.22"

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
